se corrigieron datos de pagina

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <section class="contenedor ">
 
-  <h2 class="encabezado-nosotros ">Mas sobre Notros </h2>
+  <h2 class="encabezado-nosotros ">Mas sobre Nosotros </h2>
   
     <div class="contenedor-anuncios">
   <div class="icono-nosotros">
