--- a/funcion.html
+++ b/funcion.html
@@ -54,9 +54,8 @@
 
 <section class="contenedor contenido-header">
   <div class="contenido-nos">
-    <div class="imagen">
-        <img src="img/img14.jpg" alt="imagen nosotros ">
-
+    <div class="img imagen2">
+      <img src="img/img11.jpg" width="960" height="640" />
     </div>
     <div class="texto-nosotros contenedor">
       <p> ¿Cómo funciona un Calefón Solar? El principio de funcionamiento de los calefones solares está basadas en el movimiento del agua entre el colector y el termotanque solar. El agua absorbe el calor del sol dentro del colector y luego se almacena en el termotanque solar. Este ciclo se repite hasta que la temperatura del agua alcanza el nivel deseado. La circulación del agua entre estos dos componentes, colector y termotanque solar, puede suceder de dos maneras: Por circulación natural o Calefón Solar Atmosférico: La circulación en este tipo de instalación se debe a la diferencia de densidad entre el agua caliente y fría (el agua caliente es más ligero que el agua fría). Se produce una recirculación natural entre el colector y termotanque solar, aumentando la temperatura de éste último hasta alcanzar los valores deseados en un breve período de tiempo. Para un correcto funcionamiento del termosifón, el depósito debe estar siempre instalado sobre el colector solar. Otro de los sistemas es por Circulación Forzada o conocido como Calefón Solar Presurizado. Este tipo de instalación, la circulación del agua entre los colectores y el termotanque solar, se produce con el uso de una bomba. El modelo TPS SAIAR, uno de los modelos comercializados por nuestra empresa, utiliza la tecnología de transmisión de temperatura a través de Heat Pipes. La transmisión de calor desde el Heat Pipe hacia el agua de consumo es indirecto, de tal forma que no existe contacto entre el bulbo del tubo Heat Pipe con el agua de consumo. Es ideal para zonas con bajas temperaturas: como no hay agua en el tubo de vacío, no hay riesgo de congelamiento y es adecuada para el uso en áreas muy frías. Ante una rotura de un tubo sigue en funcionamiento sin pérdidas de agua.
