se carga proyecto

--- a/index.html
+++ b/index.html
@@ -1,151 +1,150 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<head>
-  <meta charset="utf-8">
-  <title>Dalarok Solar</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- se carga bootstrap -->
+    <link rel="stylesheet" href="css/Bootstrap.css">
+    <!-- se hace la carga de font-->
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <!-- se hace la carga de stilos css -->
+    <link rel="stylesheet" href="css/style.css">
+    <title>Hello world</title>
+  </head>
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
-
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/fontawesome-all.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/main.css">
-
-  <meta name="theme-color" content="#fafafa">
-</head>
-
-<body>
-
-  <!-- Add your site or application content here -->
-
-<header class="site-header">
-  <div class="general">
-    <div class="contenido-header">
-      <nav class="redes-sociales">
-        <a href="https://www.facebook.com/dalarok_solar-108071503881082/"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/dalarok_solar/"><i class="fab fa-instagram"></i></a>
-      </nav>
-      <div class="info-solares">
-        <div class="clearfix">
-        <p class="ciudad"> Cordoba, Argentina.</p>
-        <h1 class="nombre-sitio">Dalarok Solar</h1>
-      <p class="slogan">Minimizamos el impacto ambiental, <span>Maximisamos tus ahorros. </span></p>
-    </div>
+  <body>
+ <section class="Bienvenidos">
+   <div class="container">
+     <header class="encabezado">
+    <nav class="navbar navbar-light navbar-fixed-top">
+      <button class="navbar-toggler navbar-toggler-right " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="#!">MonkiApp</a>
+    
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+          <li class="nav-item active ">
+            <a class="nav-link" href="#!">Inicio</a>
+          </li>
+          <li class="nav-item  ">
+            <a class="nav-link" href="#!">Nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#!">Servicios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#!">Portafolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#!">Contacto</a>
+          </li>
+        </ul>
       </div>
-      
-    </div>
-  </div>
-
-</header>
-<div class="barra">
-  <div class="contenedor clearfix">
-    <div class="logo">
-      <h3 class="contenedor clearfix"><i class="fas fa-sun"></i> Dalarok <span>Solar</span></h3>
-    </div>
-<!--
-    <div class="menu-movil">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-  -->
-
-    <nav class="navegacion-principal">
-      <a href="funcion.html">¿Como Funciona?</a>
-      <a href="nosotros.html"> Nosotros</a>
-      <a href="contacto.html"> Contacto</a>
-
     </nav>
-  </div> <!--contenedor-->
-</div> <!-- barra-->
-
-
-<section class="contenedor ">
-
-  <h2 class="encabezado-nosotros ">Mas sobre Nosotros </h2>
-  
-    <div class="contenedor-anuncios">
-  <div class="icono-nosotros">
-    <div class="anuncio">
-    <div class="icono">
-     <img src="img/icono1.svg" alt="icono seguridad">
-     <h3>SEGURIDAD </h3>
-     <p>Desde <strong>Dalarok Solar</strong> te damos la seguridad de el producto. Utilizamos los mejores materiales para que tu equipo funcione de la mejor manera. 
-    Los equipos, Brindamos soluciones bajo el cumplimiento de estrictas normativas de calidad que nos permiten asegurar que nuestro productos tendrán una vida útil de 30 años.Nuestros equipos térmicos poseen la certificación ISO 9001:2015 y están aprobados por el Instituto nacional de tecnología industrial (INTI). </p>
-   </div>
-  </div>
-   <div class="anuncio">
-   <div class="icono">
-     <img src="img/icono2.svg" alt="icono precio">
-     <h3 >¿Por que Conviene? </h3>
-     <p>Definitivamente SI ! desde <strong>Dalarok solar</strong> recomendamos independientemente del entorno climatico donde vivas un termotanque solar siempre va a generar ahorro energetico. 
-      <strong>Los termotanques solares logran importantes ahorros reduciendo el consumo de gas o electricidad hasta en un 80%.</strong>
-       .</p>
-   </div>
-  </div>
-  <div class="anuncio">
-   <div class="icono">
-     <img src="img/icono3.svg" alt="icono tiempo">
-     <h3>A TIEMPO</h3>
-     <p> En<strong> Dalarok Solar</strong> tenemos especialistas dedicados a la instalacion de tu equipo para que no solamente sea rapida, si no que tambien efectiva. No dudes en contactartnos</p>
-   </div>
+   
+  </header>
+  <div class="texto-bienvenido text-center">
+    <p class="h3">App En Continua Construccion</p>
+    <h1 class="display-4">Bienvenido a La App</h1>
+    <a href="#" class="btn btn-primary btn-lg">CONTACTO</a>
   </div>
 </div>
+ </section>
+<section class="quienes-somos py-3 text-center">
+  <div class="container ">
+    <img src="imagenes/nosotros.svg" alt="nosotros" width="140" class="img-fluid m-x-auto mb-3">
+    <h2 class="h3">¿QUIENES SOMOS?</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam excepturi commodi in, natus eaque eveniet quod deleniti 
+      placeat ut ab assumenda. Laudantium, voluptate reprehenderit. Omnis sequi fugit sed nesciunt assumenda.</p>
+      <a href="#" class="btn btn-secondary btn-lg">MAS INFORMACION</a>
+
+
+
+
   </div>
-</section> 
 
-
-
-
-<section class="galeria ">
-  <div class=" contenedor">
-   <h2 class="encabezado-nosotros"> Nuestros Trabajos </h2>
-        <div class="ver-todas">
-             <a href="nosotros.html" class="boton boton-verde">Galeria</a>
-        </div>  
-  </div>
-</div>
-</section> 
-
-<footer class="site-footer seccion navegacion-footer">
-  <nav class="navegacion-principal contenedor">
-    <a href="nosotros.html"> Nosotros</a>
-    <a href="contacto.html"> Contacto</a>
-    <p class="contenedor"><i class="far fa-envelope"> </i><strong>dalaroksolar@gmail.com</strong</i> </p>
-
-</nav>
-<div class="iconos-footer contenedor">
-    <p><i class="fab fa-whatsapp"> </i> 3543574850 / 3543551038 </p>
-    <p><i class="fab fa-instagram"> </i> Dalarok_Solar</p>
-    <p><i class="fab fa-facebook-f"></i> Dalarok Solar</p>
-  </div>  
+ 
+</section>
+<section class="servicios py-3 text-center">
+  <div class="container">
+    <h2 class="h3">NUESTROS SERVICIOS</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <i class="fa fa-code"></i>
+        <h3>Automatizacion De Procesos </h3>
+         <p>  Deserunt quam distinctio rerum quas dolorum autem nostrum ea maxime ab, esse maiores numquam nam id adipisci dolor.</p>
+      </div>
+      <div class="col-md-4">
+        <i class="fa fa-code"></i>
+        <h3>Mantenimiento </h3>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem animi cum voluptates. 
+           adipisci dolor.</p>
+      </div>
+      <div class="col-md-4">
+        <i class="fa fa-code"></i>
+        <h3>Desarrollos </h3>
+         <p>consectetur adipisicing elit. Dolorem animi cum voluptates. 
+          Deserunt quam distinctio rerum quas dolorum autem nostrum adipisci dolor.</p>
+      </div>
+</section>
+<section class="ultimos-proyectos py-3 text-center">
+ <div class="container">
+  <h2 class="h3 mb-3">PROYECTOS</h2>
+  <div class="row">
+    <div class="col-md-4">
+      <a href="#">
+       <img src="imagenes/proyecto1.svg" alt="nosotros" width="290" class="img-fluid m-x-auto ">
+      </a>
     </div>
+    <div class="col-md-4">
+      <a href="#">
+       <img src="imagenes/proyecto2.svg" alt="nosotros" width="290" class="img-fluid m-x-auto ">
+      </a>
+    </div>
+    <div class="col-md-4">
+      <a href="#">
+       <img src="imagenes/proyecto3.svg" alt="nosotros" width="290" class="img-fluid m-x-auto ">
+      </a>
+    </div>
+    <div class="col-md-4">
+      <a href="#">
+       <img src="imagenes/proyecto4.svg" alt="nosotros" width="290" class="img-fluid m-x-auto ">
+      </a>
+    </div>
+    <div class="col-md-4">
+      <a href="#">
+       <img src="imagenes/proyecto5.svg" alt="nosotros" width="290" class="img-fluid m-x-auto ">
+      </a>
+    </div>
+    <div class="col-md-4">
+      <a href="#">
+       <img src="imagenes/proyecto6.svg" alt="nosotros" width="290" class="img-fluid m-x-auto ">
+      </a>
+    </div>
+
+  </div>
+ 
+ </div>
+
+</section>
+<footer class="footer">
+  <div class="container text-center">
+    <p>
+      2020 MonkiApp Creado con Bootstrap 4
+    </p>
+  </div>
+
 </footer>
 
-  
 
 
 
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
-
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
-</body>
-
+   
+    <!-- jQuery y Bootstrap  -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
